fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -139,14 +139,17 @@ body {
   .card__text {
     font-size: 2rem;
     margin-bottom: 2rem; }
-    .card__text--link {
-      text-transform: uppercase;
-      color: #ff6c1d;
-      font-weight: 700;
-      text-decoration: none; }
 
 .footer {
-  padding: 15rem 0; }
+  padding: 15rem 0;
+  background-image: url(../img/bg.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat; }
+  @media (max-width: 48em) {
+    .footer {
+      text-align: center;
+      padding: 9rem 0; } }
   .footer__link {
     position: relative;
     display: inline-block;
@@ -175,6 +178,26 @@ body {
     font-weight: 700;
     text-decoration: none;
     color: inherit; }
+  .footer__social-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center; }
+    @media (max-width: 48em) {
+      .footer__social-list {
+        justify-content: center; } }
+  .footer__social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    margin-right: 2rem; }
+    @media (max-width: 48em) {
+      .footer__social-link {
+        margin: 0 1rem; } }
+  .footer__social-icon {
+    width: 2.5rem;
+    height: 2.5rem;
+    fill: rgba(67, 75, 109, 0.5); }
 
 .row {
   max-width: 114rem;
@@ -184,7 +207,7 @@ body {
     margin-bottom: 8rem; }
     @media (max-width: 48em) {
       .row:not(:last-child) {
-        margin-bottom: 5rem; } }
+        margin-bottom: 3rem; } }
   @media (max-width: 48em) {
     .row {
       max-width: 80rem;
@@ -200,7 +223,7 @@ body {
       @media (max-width: 48em) {
         .row [class^="col-"]:not(:last-child) {
           margin-right: 0;
-          margin-bottom: 5rem; } }
+          margin-bottom: 3rem; } }
     @media (max-width: 48em) {
       .row [class^="col-"] {
         width: 100% !important; } }
@@ -286,13 +309,15 @@ body {
     align-items: center; }
     @media (max-width: 48em) {
       .navigation__list {
-        flex-direction: column;
+        flex-wrap: wrap;
         padding: 1rem 0; } }
   .navigation__item {
     display: inline-block; }
     @media (max-width: 48em) {
       .navigation__item {
-        margin-bottom: 1rem; } }
+        display: flex;
+        flex-wrap: wrap;
+        margin: 1rem 2rem; } }
   .navigation__link {
     position: relative;
     font-size: 2rem;
@@ -321,6 +346,19 @@ body {
 .section-working-list {
   padding: 15rem 0;
   background-color: #fff; }
+
+@media (max-width: 48em) {
+  .services__list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap; } }
+
+@media (max-width: 48em) {
+  .services__text {
+    text-align: center; } }
+
+.services__title {
+  margin: 0 2rem; }
 
 .section-background-color {
   padding: 15rem 0;
