--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,4 +1,3 @@
-
 // COLORS
 
 $color-primary: #434b6d;
@@ -13,15 +12,6 @@ $color-cyan-light: #e1f1ff;
 
 $color-yellow: #fec430;
 
-
-
-
-
-
-
-
-
-
 // FONTS
 
 $font-family-main: "Lato";
@@ -31,5 +21,5 @@ $font-family-second: "sans-serif";
 
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
-$gutter-vertical-small: 5rem;
+$gutter-vertical-small: 3rem;
 $gutter-horizontal: 6rem;
