--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,36 +1,26 @@
 .card {
-    background-color: $color-white;
-    border-radius: 21px;
-    padding: 4rem 4rem;
+  background-color: $color-white;
+  border-radius: 21px;
+  padding: 4rem 4rem;
 
-    &__title {
-        text-align: center;
-        font-size: 2.6rem;
-    }
+  &__title {
+    text-align: center;
+    font-size: 2.6rem;
+  }
 
-    &__image {
-        width: 100%;
+  &__image {
+    width: 100%;
+  }
 
-    }
+  &__image-box {
+  }
 
-    &__image-box {
+  &__text-box {
+    text-align: center;
+  }
 
-    }
-    
-    &__text-box {
-        text-align: center;
-    }
-
-    &__text {
-        font-size: 2rem;
-        margin-bottom: 2rem;
-
-        &--link {
-            text-transform: uppercase;
-            color: $color-orange;
-            font-weight: 700;
-            text-decoration: none;
-        }
-    }
-    
+  &__text {
+    font-size: 2rem;
+    margin-bottom: 2rem;
+  }
 }
