--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,5 +1,14 @@
 .footer {
   padding: 15rem 0;
+  background-image: url(../img/bg.svg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  @include addMediaQuery(tablet) {
+    text-align: center;
+    padding: 9rem 0;
+  }
 
   &__link {
     position: relative;
@@ -40,5 +49,32 @@
     font-weight: 700;
     text-decoration: none;
     color: inherit;
+  }
+
+  &__social-list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    @include addMediaQuery(tablet) {
+      justify-content: center;
+    }
+  }
+
+  &__social-link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 2;
+    margin-right: 2rem;
+
+    @include addMediaQuery(tablet) {
+      margin: 0 1rem;
+    }
+  }
+
+  &__social-icon {
+    width: 2.5rem;
+    height: 2.5rem;
+    fill: rgba($color-primary, 0.5);
   }
 }
